# hans_dev_tools

./: .gitignore  README.md  md2pdf.py
ai_search_indexer/: .env.example  README.md
ai_search_indexer/sample_scenario/: search_manifest.yaml
ai_search_indexer/scripts/: deploy_scenario.py  provision_search_index.py
fabric_data_loader/: README.md
fabric_data_loader/sample_scenario/: deploy_manifest.yaml  graph_schema.yaml  scenario.yaml
fabric_data_loader/sample_scenario/data/entities/: Authors.csv  (+4 more)
fabric_data_loader/scripts/: _config.py  _deploy_client.py  _deploy_manifest.py  deploy_scenario.py  populate_fabric_config.py  provision_eventhouse.py  provision_lakehouse.py  provision_ontology.py  provision_workspace.py
fabric_data_loader/scripts/_stages/: __init__.py  auth.py  eventhouse.py  folder.py  lakehouse.py  ontology.py  verify.py  workspace.py
fabric_tools/: .env.example  README.md  pyproject.toml  test_tools.py  test_with_agent.py
fabric_tools/fabric_tools/: __init__.py  _auth.py  _constants.py  _credentials.py  _guardrails.py  _resilience.py  _stubs.py  _throttle.py
fabric_tools/fabric_tools/graph/: __init__.py  _ontology.py  _query.py
fabric_tools/fabric_tools/telemetry/: __init__.py  _alerts.py  _query.py
foundry_agent_context_demo/: COMPARISON_REPORT.md  benchmark.py  pyproject.toml
foundry_agent_context_demo/current_pathfinderiq_style/: foundry_agent_context_demo.py  pyproject.toml
foundry_agent_context_demo/current_pathfinderiq_style/frontend/: index.html
foundry_agent_context_demo/native_context_provider/: RESEARCH.md  native_context_demo.py  pyproject.toml
graph_viz/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
graph_viz/public/: topology.json
graph_viz/src/: App.tsx  index.css  main.tsx
graph_viz/src/constants/: graphConstants.ts
graph_viz/src/hooks/: useNodeColor.ts  usePausableSimulation.ts  useTooltipTracking.ts  useTopology.ts
graph_viz/src/types/: graph.ts
streaming_chat_ui/: .env  .env.example  README.md
streaming_chat_ui/backend/: requirements.txt
streaming_chat_ui/backend/app/: __init__.py  config.py  main.py  models.py
streaming_chat_ui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
streaming_chat_ui/frontend/src/: App.tsx  index.css
(+52 files in other folders)
