[project]
name = "foundry-agent-context-demo"
version = "0.1.0"
description = "Benchmark and demo: PathfinderIQ-style vs native context provider for Foundry agents"
requires-python = ">=3.11"
dependencies = [
    "agent-framework==1.0.0rc3",
    "agent-framework-azure-ai==1.0.0rc3",
    "azure-ai-projects==2.0.0b4",
    "azure-identity>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
prerelease = "allow"
