[project]
name = "foundry-agent-context-demo"
version = "0.1.0"
description = "Single-file demo: custom context management for Azure AI Foundry agents"
requires-python = ">=3.11"
dependencies = [
    "agent-framework==1.0.0rc3",
    "agent-framework-azure-ai==1.0.0rc3",
    "azure-ai-projects==2.0.0b4",
    "azure-identity>=1.19.0",
]

[project.scripts]
demo = "foundry_agent_context_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
prerelease = "allow"
